# cabal-package-collections

./: .gitignore  CHANGELOG.md  README.md  cabal-package-collections.cabal  cabal.project
spec/Cabal/: CollectionsSpec.hs
spec/Cabal/Collections/: Gen.hs
src/Cabal/: Collections.hs
