cabal-version: 3.12
name: cabal-package-collections
version: 0.1.0.0
license: NONE
author: Fraser Murray
maintainer: fraser.m.murray@gmail.com
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall -Wextra -Wcompat

common language
  default-language: GHC2021
  default-extensions:
    OverloadedStrings
    StrictData
    LambdaCase

library
  import: warnings
  import: language

  build-depends:
    base >= 4.18 && < 5,
    Cabal-syntax,
    containers,
    text,
    text-display,
  hs-source-dirs: src
  exposed-modules:
    Cabal.Collections

test-suite cabal-package-collections-spec
  import: warnings
  import: language

  type: exitcode-stdio-1.0
  hs-source-dirs: spec
  main-is: Main.hs
  other-modules:
    Cabal.CollectionsSpec
    Cabal.Collections.Gen
  build-tool-depends:
    hspec-discover:hspec-discover
  build-depends:
    base ^>=4.20.0.0,
    cabal-package-collections,
    hspec,
    hedgehog,
    hspec-hedgehog,
    Cabal-syntax,
    text,
    text-display,
